# react-native-gcanvas

./: CMakeLists.txt  GCanvas.podspec  README.MD  build.gradle  index.js  package.json  publish.gradle
android/: build.gradle
android/adapters/bridge_adapter/: build.gradle
android/bridge_spec/: build.gradle
android/bridge_spec/src/main/java/com/taobao/gcanvas/bridges/spec/module/: AbsGBridgeModule.java  IGBridgeModule.java
android/gcanvas_library/: build.gradle
android/gcanvas_library/src/main/java/com/taobao/gcanvas/: GCanvasJNI.java  GFontConfigParser.java
android/gcanvas_library/src/main/java/com/taobao/gcanvas/surface/: GTextureView.java  GTextureViewCallback.java
android/src/main/java/com/taobao/gcanvas/bridges/rn/: GReactModule.java  GReactTextureView.java  GReactViewManager.java
components/: GCanvasComponent.js
core/: CMakeLists.txt
core/android/: GCanvasJNI.cpp  GCanvasJNI.h
core/android/3d/: g3d_jni.cpp  g3d_jni.h
core/android/3d/view/: grenderer.cpp  grenderer.h
core/android/freetype/: CMakeLists.txt
core/android/freetype/include/freetype/: ftimage.h
core/android/freetype/src/sfnt/: pngshim.c
core/android/libpng/: .gitignore  CMakeLists.txt
core/android/libpng/contrib/pngminus/: CMakeLists.txt
core/android/libpng/scripts/: makefile.darwin  makefile.linux  makefile.linux-opt
core/src/: GCanvas.cpp  GCanvasWeex.cpp  GCanvasWeex.hpp
core/src/gcanvas/: GCanvas2dContext.cpp  GCanvas2dContext.h  GContext2dType.h  GFontManager.h  GFontStyle.cpp  GGlyphCache.cpp  GGlyphCache.h  GWebglContext.cpp
core/src/gcanvas/shaders/: texture.glsl
core/src/platform/Android/: GCanvas2DContextAndroid.h  GCanvas2DContextImpl.cpp  GFont.cpp  GFont.h  GFontCache.cpp  GFontCache.h  GFontFamily.cpp  GFontManager.cpp  GFontManagerAndroid.cpp  GFontManagerAndroid.h  GSystemFontInformation.cpp  GSystemFontInformation.h
core/src/platform/Linux/: GFontManager.cpp
core/src/platform/iOS/: GCVFont.h  GCVFont.mm  GFontManager.mm
core/src/support/: CharacterSet.cpp  CharacterSet.h  GLUtil.cpp  GLUtil.h
core/test/linux/: CMakeLists.txt
docs/: APIs.md  Changelog.md  Reference_WebGL.md
ios/: RCTGCanvasModule.m
ios/BridgeModule/: GCanvasModule.h  GCanvasModule.m  GCanvasPlugin.h  GCanvasPlugin.mm
node/: CMakeLists.txt
webgl_demo/: cube.js
